--- a/index.html
+++ b/index.html
@@ -247,26 +247,7 @@
           </ul>
           <h2 class="section-title">Authors</h2>
           <ul class="list authors">
-            <li>
-              <a href="#">
-                <span class="author-name">Kitty Toebean</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="author-name">Theo Tabby</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="author-name">George Tuxedo</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="author-name">Marion Berry</span>
-              </a>
-            </li>
+            <!-- list authors -->
           </ul>
         </aside>
       </main>
